Added thesis and slides

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Enric Florit Zacarías</title>
+	<title>Enric Florit Zacarías<sup>1</sup></title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="icon" type="image/png" href="fantasma.png">
 </head>
 <body>
 	<section id="main">
-		<h1>Enric Florit Zacarías</h1>
-		<p>I studied Mathematics and Computer Engineering at Universitat de Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB. I started my PhD at UB in October 2021, funded by an FPU2020 grant from the Spanish Ministry of Universities.</p>
+		<h1>Enric Florit Zacarías<sup><a href="#footnote1" class="footnote">1</a></sup></h1>
+		<p>I studied Mathematics and Computer Engineering at Universitat de Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB. I defended my PhD at UB in November 2025, and I was funded by an FPU2020 grant from the Spanish Ministry of Universities.</p>
 		
-		<p>I am currently working on abelian varieties of GL(4)-type and their conjectural connection to Siegel paramodular forms.</p>
+		<p>My research interests comprise the arithmetic of abelian varieties, including isogenies, endomorphism rings, and systems of Galois representations. I am currently working on abelian varieties of GSp(4)-type and their conjectural connection to Siegel paramodular forms.</p>
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. You will also find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
 		<p>My email address is: enricflorit at ub dot edu.</p>
@@ -91,6 +91,11 @@
 
 		
 
+		<h2>Thesis</h2>
+
+		<ul id="thesis">
+			<li><i>Nov. 2025.</i> <b>Abelian Varieties of GL<sub>n</sub>-type and Galois Representations.</b> PhD Thesis. [<a href="assets/Thesis/EFZ-thesis.pdf">pdf</a>, <a href="assets/Thesis/EFZ-thesis-defense.pdf">slides</a>]</li>
+		</ul>
 		<h2>Talks</h2>
 
 		<ul id="materials">
@@ -218,6 +223,8 @@
 			<li><a href="https://www.ub.edu/nt/ffite/LS-SS23.pdf">Learning seminar on Quadratic Chabauty</a>, Spring 2023.</li>
 			<li><a href="http://www.ub.edu/nt/ffite/LS-WS21.pdf">Learning seminar on Automorphic Forms</a>, Spring 2022.</li>
 		</ul>
+	<br><br>
+	<p><a id="footnote1" href="#">[1]</a> I sign most of my academic work under "Enric Florit". My name and first surname are rather unusual where I live, but even then I happen to share them with another mathematician who also studied in Barcelona. If you want to find his work, look for "Enric Florit-Simón".</p>
 	</section>
 </body>
 </html>
