--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Enric Florit Zacarías<sup>1</sup></title>
+	<title>Enric Florit Zacarías</title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="icon" type="image/png" href="fantasma.png">
 </head>
