--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p>My research interests comprise the arithmetic of abelian varieties, including isogenies, endomorphism rings, and systems of Galois representations. I am currently working on abelian varieties of GSp(4)-type and their conjectural connection to Siegel paramodular forms.</p>
 
 		<p>Here you will find a growing (and at times, incomplete) list of my projects. You will also find some slides for talks I have given. This website is updated once every few months, mostly when I have some new material to share.</p>
-		<p>My email address is: enricflorit at ub dot edu.</p>
+		<p>My work email address is changing soon. If you want to contact me in the meantime, look at the end of one of my earlier papers.</p>
 		<p>Some links:</p>
 		<ul class="left">
 			<li>The <a href="http://www.ub.edu/simba/">SIMBa Seminar</a>: informal mathematics seminar in Barcelona</li>
