--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 	<section id="main">
 		<h1>Enric Florit Zacarías<sup><a href="#footnote1" class="footnote">1</a></sup></h1>
+		<p>Since January 2026 I am a <i>Professor Lector</i> at the Universitat Oberta de Catalunya.</p>
+		
 		<p>I studied Mathematics and Computer Engineering at Universitat de Barcelona (2014 - 2020). I did my Master's degree in Advanced Mathematics at Universitat de Barcelona, which I finished in July 2021. During my master's degree I had support from a Màster+UB scholarship at IMUB. I defended my PhD at UB in November 2025, and I was funded by an FPU2020 grant from the Spanish Ministry of Universities.</p>
 		
 		<p>My research interests comprise the arithmetic of abelian varieties, including isogenies, endomorphism rings, and systems of Galois representations. I am currently working on abelian varieties of GSp(4)-type and their conjectural connection to Siegel paramodular forms.</p>
