--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 		<h2>Talks</h2>
 
 		<ul id="materials">
+			<li><i>Jan. 2026.</i> <b>Recognizing fake elliptic curves.</b> <a href="http://stnb.cat/en/seminaris/2026/">39th Seminari de Teoria de Nombres de Barcelona</a>.</li>
 			<li><i>Oct. 2025.</i> <b>Endomorphism algebras of Siegel-modular abelian varieties.</b> Number Theory Seminar at UAM, Madrid.</li>
 			<li><i>July 2025.</i> <b>Modularity of abelian surfaces with potential QM.</b> 33èmes Journées arithmétiques, Luxembourg (<a href="/assets/JA2025.pdf">slides</a>).</li>
 			<li><i>April 2025.</i> <b>Quaternionic multiplication and abelian fourfolds.</b> <a href="http://www.cig.udl.cat/SQIparty2025_home">The SQIParty: a Workshop on Isogeny-Crypto</a>, Lleida.</li>
